bare minimum requirements with ugly layout issues

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,118 @@ html, body, #app {
 /* Continue building out the CSS styling for your Twiddler app below! We got you started by
 providing a space for you to apply styles to your app's outermost HTML element - the #app itself. */
 
+/* ELEMENTS */
+
+body {
+  background-image: linear-gradient(135deg, rgb(98, 88, 226), rgb(3, 95, 3));
+  font-family: 'Rasa', serif;
+}
+
+ h1 {
+   margin: 0 auto;
+   font-weight: 400;
+   font-style: italic;
+ }
+
+
+
+/* IDS */
+
 #app {
-  background-color: green;
-  color: yellow;
+  background-color: rgba(255, 160, 122, 0.7);
+  color: darkblue;
+  margin: 10px auto;
+  padding: 10px;
+  width: clamp(320px, 640px, 960px);
+  border-radius: 10px;
+}
+
+#header {
+  text-align: center;
+
+
+}
+
+#extra-credit {
+  padding: 0;
+  margin: 0;
+
+}
+
+#new-tweet-form {
+  float: left;
+
+  /* width: clamp(320px, 640px, 960px); */
+  padding: 10px;
+  height: 100%;
+
+}
+
+#friends-list {
+  float: left;
+
+  padding: 10px;
+  height: 100%;
+  margin-top: 0;
+  margin-bottom: 0;
+  top: auto;
+  position: relative;
+}
+
+#feed-area {
+  border: 1px darkkhaki dotted;
+  padding: 10px;
+  clear: both;
+  width: 95%;
+
+}
+
+.username {
+  font-weight: 700;
+  ;
+}
+
+.tweet {
+  border: 1px darkmagenta dashed;
+  padding: 10px;
+  display: flex;
+  flex-flow: row;
+  border-radius: 10px;
+  margin: 20px inherit 20px inherit;
+  justify-content: flex-start;
+  gap: 15px;
+}
+
+.tweetTextContainer {
+  display: inline-flex;
+  flex-direction:column;
+  flex-wrap: wrap;
+  padding-left: 30px;
+}
+
+.username, .message, .timestamp, .iconContainer, .iconComment, .iconShare, .iconRetweet, .iconLike {
+  display: inline-flexbox;
+  border-width: 0px;
+  padding-left: 0;
+}
+
+.iconContainer {
+  display: inline-flex;
+  width: 250px;
+  height: 50px;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-shrink: 0;
+  flex-wrap: nowrap;
+  padding-left: 0;
+
+}
+
+.icon {
+  display: inline-flex;
+  flex: 1 auto;
+}
+
+.timestamp {
+  font-size: small;
 }
